2013-01-02  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ # 16365]
	* nscd/netgroupcache.c (addgetnetgrentX): Break if status is
	NSS_STATUS_NOTFOUND.

2014-01-01  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/i386/fpu/libm-test-ulps: Regenerated.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2014-01-01  Allan McRae  <allan@archlinux.org>

	* scripts/update-copyrights: Update configure input file suffix.

	* NEWS: Update copyright year.
	* catgets/gencat.c: Likewise.
	* csu/version.c: Likewise.
	* debug/catchsegv.sh: Likewise.
	* debug/pcprofiledump.c: Likewise.
	* debug/xtrace.sh: Likewise.
	* elf/ldconfig.c: Likewise.
	* elf/ldd.bash.in: Likewise.
	* elf/pldd.c: Likewise.
	* elf/sotruss.ksh: Likewise.
	* elf/sprof.c: Likewise.
	* iconv/iconv_prog.c: Likewise.
	* iconv/iconvconfig.c: Likewise.
	* locale/programs/locale.c: Likewise.
	* locale/programs/localedef.c: Likewise.
	* login/programs/pt_chown.c: Likewise.
	* malloc/memusage.sh: Likewise.
	* malloc/memusagestat.c: Likewise.
	* malloc/mtrace.pl: Likewise.
	* manual/libc.texinfo: Likewise.
	* nscd/nscd.c: Likewise.
	* nss/getent.c: Likewise.
	* nss/makedb.c: Likewise.
	* posix/getconf.c: Likewise.
	* scripts/test-installation.pl: Likewise.

	* All files with FSF copyright notices: Update copyright dates
	using scripts/update-copyrights.
	* intl/plural.c: Regenerated.
	* locale/programs/charmap-kw.h: Likewise.
	* locale/programs/locfile-kw.h: Likewise.

2013-12-31  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/configure: Regenerated.
	* sysdeps/unix/sysv/linux/configure.ac: Call AC_CHECK_HEADER on
	the linux/fanotify.h header.
	* sysdeps/unix/sysv/linux/tst-fanotify.c: Check if
	HAVE_LINUX_FANOTIFY_H is defined.

2013-12-31  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/cos-inputs: New inputs.
	* benchtests/sin-inputs: Likewise.

	* benchtests/atan-inputs: New inputs. Fix name of multiple
	precision fallback inputs.

	* benchtests/atanh-inputs: New inputs.